# riff

./: .gitignore  LICENSE  README.md  riff.cabal  stack.yaml  todo
app/: Main.hs
app/Riff/: Options.hs
src/: Riff.hs
src/Riff/: Files.hs  Prelude.hs  Sanitize.hs
src/main/: Main.hs
src/test/: Main.hs
test/: Main.hs
test/Riff/: SanitizeTest.hs
