name:                riff
version:             0.2.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/riff#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Meunier
maintainer:          steven@solaryeti.com
copyright:           2010 Steven Meunier
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Riff.Files
                     , Riff.Sanitize
  build-depends:       base >= 4.7 && < 5
                     , cmdargs >= 0.10
                     , containers >= 0.5
                     , directory >= 1.2
                     , filepath >= 1.4
                     , text >= 1.2
                     , unix >= 2.7
                     , directory >= 1.2
  default-language:    Haskell2010


executable riff
  hs-source-dirs:      src/main
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cmdargs >= 0.10
                     , containers >= 0.5
                     , filepath >= 1.4
                     , unix >= 2.7
                     , riff
  default-language:    Haskell2010

test-suite riff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       QuickCheck >= 2.8
                     , base
                     , riff
                     , tasty >= 0.10
                     , tasty-quickcheck >= 0.8
  other-modules:       Riff.SanitizeTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/riff
