name:                riff
version:             0.3.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/riff#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Meunier
maintainer:          steven@solaryeti.com
copyright:           2022 Steven Meunier
category:            Application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat
  exposed-modules:     Riff
                     , Riff.Prelude
                     , Riff.Files
                     , Riff.Sanitize
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , protolude
                     , text
                     , unix
                     , directory
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

executable riff
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Riff.Options
                     , Paths_riff
  ghc-options:         -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , filepath
                     , gitrev
                     , optparse-applicative
                     , unix
                     , riff
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite riff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       QuickCheck >= 2.8
                     , base
                     , riff
                     , tasty >= 0.10
                     , tasty-quickcheck >= 0.8
  other-modules:       Riff.SanitizeTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/riff
